-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.1
-
Fix Version/s: 0.9.2
-
Component/s: Build Process, C++ - Compiler
-
Labels:None
-
Environment:
Arch linux x86_64, gcc-4.8.2, flex-2.5.38, bison-3.0.2,
thrift branch master f85fdd7a3af3255ea2464118930c10f582caf035
-
Patch Info:Patch Available
In my environment, when I try to compile the library, the build process of Thrift fails with an error when compiling compiler/cpp:
/usr/lib/gcc/x86_64-unknown-linux-gnu/4.8.2/../../../../lib/libfl.so: undefined reference to `yylex'
I've found out, that the patch attached solves the problem for me.