THRIFT-2386: Thrift refuses to link yylex Client: compiler Patch: Milan Freml

Fixes undefined reference to `yylex' due to upstream changes.