compiler/cpp/src/main.h
@@ -29,7 +29,9 @@
  * Defined in the flex library
  */
 
-int yylex(void);
+extern "C" {
+  int yylex(void);
+}
 
 int yyparse(void);
 
